Fixed: Tooltip spacing and hover effect.

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -81,7 +81,7 @@
 }
 
 .tooltip {
-  @apply invisible absolute bottom-4 -right-4 z-50;
+  @apply invisible absolute bottom-5 -right-4 z-50;
 }
 
 .has-tooltip {
